--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,44 +1,52 @@
-name: Build Windows EXE
+name: Build EXE and attach to Release
 
 on:
-  push:
-    tags:
-      - "v*"
-  workflow_dispatch:
+  release:
+    types: [published]     # parte quando pubblichi una Release
+  workflow_dispatch:       # fallback: puoi lanciarlo a mano
+    inputs:
+      tag:
+        description: 'Tag della release (es: v1.1.2)'
+        required: true
+
+permissions:
+  contents: write
 
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout at tag
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.release.tag_name || inputs.tag }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install PyInstaller
-        run: pip install pyinstaller
+      - name: Syntax check
+        run: python -m py_compile sapcar_unpacker.py
 
-      - name: Build EXE
+      - name: Install PyInstaller
+        run: pip install --upgrade pip && pip install pyinstaller
+
+      - name: Build EXE (PyInstaller)
         run: pyinstaller --onefile --noconsole --name sapcar_unpacker sapcar_unpacker.py
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sapcar_unpacker
-          path: dist/sapcar_unpacker.exe
+      - name: List build outputs (debug)
+        run: |
+          echo "PWD:" $PWD
+          dir
+          echo "DIST:"
+          dir dist
 
-  release:
-    needs: build
-    runs-on: windows-latest
-    if: startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: sapcar_unpacker
-          path: dist
-      - name: Create GitHub Release
+      - name: Upload EXE to the Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/sapcar_unpacker.exe
+          tag_name: ${{ github.event.release.tag_name || inputs.tag }}
+          files: |
+            dist/sapcar_unpacker.exe
+          fail_on_unmatched_files: true
