refactor: Rimuovi la creazione del file .spec e semplifica il processo di build dell'EXE con PyInstaller

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,66 +33,24 @@ jobs:
           pip install -r requirements.txt
           pip install pyinstaller
 
-      - name: Create spec file
+      - name: Prepare build environment
         run: |
-          echo "# -*- mode: python -*-
-          block_cipher = None
-
-          a = Analysis(
-              ['src/main.py'],
-              pathex=['src'],
-              binaries=[],
-              datas=[('src', 'src')],
-              hiddenimports=['customtkinter', 'PIL', 'tkinter'],
-              hookspath=[],
-              hooksconfig={},
-              runtime_hooks=[],
-              excludes=[],
-              win_no_prefer_redirects=False,
-              win_private_assemblies=False,
-              cipher=block_cipher,
-              noarchive=False,
-          )
+          mkdir build
+          cd build
+          cp -r ../src .
+          cp ../requirements.txt .
           
-          # Add customtkinter files
-          import os
-          import customtkinter
-          ctk_path = os.path.dirname(customtkinter.__file__)
-          a.datas += Tree(ctk_path, prefix='customtkinter', excludes=['*.py'])
-          
-          pyz = PYZ(a.pure, a.zipped_data, cipher=block_cipher)
-          
-          exe = EXE(
-              pyz,
-              a.scripts,
-              a.binaries,
-              a.zipfiles,
-              a.datas,
-              [],
-              name='sapcar_unpacker',
-              debug=False,
-              bootloader_ignore_signals=False,
-              strip=False,
-              upx=True,
-              upx_exclude=[],
-              runtime_tmpdir=None,
-              console=False,
-              disable_windowed_traceback=False,
-              target_arch=None,
-              codesign_identity=None,
-              entitlements_file=None,
-          )" > sapcar_unpacker.spec
-
       - name: Build EXE (PyInstaller)
         run: |
-          pyinstaller --clean sapcar_unpacker.spec
-          
-      - name: Test EXE launch
-        run: |
-          cd dist
-          ./sapcar_unpacker.exe &
-          Start-Sleep -s 5
-          Get-Process sapcar_unpacker -ErrorAction SilentlyContinue | Stop-Process
+          cd build
+          pyinstaller --clean --onefile --noconsole --name sapcar_unpacker `
+            --add-data "src;." `
+            --hidden-import customtkinter `
+            --hidden-import PIL `
+            --hidden-import PIL._tkinter_finder `
+            --collect-all customtkinter `
+            --paths "src" `
+            src/main.py
 
       - name: List build outputs (debug)
         run: |
